<resources>
    <string name="app_name">快乐贷</string>
    <string name="me">我</string>
    <string name="finds">发现</string>
    <string name="friends">好友</string>
    <string name="loan">借贷</string>

    <string name="me_scan">我的二维码</string>

    <string name="login_out">退出登录</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">账号不存在</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">账号不能为空</string>
    <string name="permission_rationale">"联系人权限提供电子邮件完成的需要"</string>

</resources>
